[gd_scene load_steps=14 format=3 uid="uid://i4nnwgwck615"]

[ext_resource type="Script" path="res://src/ui-components/formation/formation.gd" id="1"]
[ext_resource type="Theme" uid="uid://pt1hrfiuwfpg" path="res://theme.tres" id="2"]
[ext_resource type="PackedScene" uid="uid://cmwiocyu2rdxq" path="res://src/ui-components/formation/player/formation_player.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://dq4dr3oe20mb8" path="res://src/ui-components/player-list/player_list.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://cctv8141lfp0o" path="res://assets/field.png" id="5"]

[sub_resource type="Animation" id="1"]
resource_name = "Fade1-1-2"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Field/D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(436, 600)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Field/WL:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(436, 405)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Field/WR:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(636, 200)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Field/P:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(236, 200)]
}

[sub_resource type="Animation" id="2"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Field/D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(436, 600)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Field/WL:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(236, 400)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Field/WR:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(636, 400)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Field/P:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(436, 220)]
}

[sub_resource type="Animation" id="3"]
resource_name = "Fade1-3"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Field/P:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(436, 190)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Field/WR:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(636, 200)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Field/WL:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(236, 200)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Field/D:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(436, 510)]
}

[sub_resource type="Animation" id="4"]
resource_name = "Fade2-1-1"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Field/D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(236, 560)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Field/WL:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(436, 360)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Field/WR:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(636, 560)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Field/P:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(436, 180)]
}

[sub_resource type="Animation" id="5"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Field/P:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(236, 200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Field/WR:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(636, 200)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Field/WL:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(236, 550)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Field/D:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(636, 550)]
}

[sub_resource type="Animation" id="6"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Field/P:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(436, 240)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Field/WR:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(646, 540)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Field/WL:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(216, 540)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Field/D:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(436, 590)]
}

[sub_resource type="Animation" id="7"]
resource_name = "Fade4-0"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Field/D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(336, 600)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Field/WL:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(536, 600)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Field/WR:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(736, 400)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Field/P:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(436, 436), Vector2(136, 400)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pevmi"]
_data = {
"Fade1-1-2": SubResource("1"),
"Fade1-2-1": SubResource("2"),
"Fade1-3": SubResource("3"),
"Fade2-1-1": SubResource("4"),
"Fade2-2": SubResource("5"),
"Fade3-1": SubResource("6"),
"Fade4-0": SubResource("7")
}

[node name="Formation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="FormationSelect" type="OptionButton" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.141
anchor_top = 0.112
anchor_right = 0.297
anchor_bottom = 0.176
offset_left = 195.52
offset_top = -89.64
offset_right = 195.84
offset_bottom = -89.72

[node name="Field" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Field"]
layout_mode = 1
offset_left = 756.0
offset_top = 64.0
offset_right = 1916.0
offset_bottom = 644.0
rotation = 1.5708
texture = ExtResource("5")
expand_mode = 1

[node name="G" parent="Field" instance=ExtResource("3")]
layout_mode = 1
anchor_left = 0.0046875
anchor_top = 0.0416667
anchor_right = 0.0046875
anchor_bottom = 0.0416667
offset_left = 437.0
offset_top = 87.0
offset_right = 497.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 0

[node name="D" parent="Field" instance=ExtResource("3")]
layout_mode = 1
anchor_left = -0.0929687
anchor_top = -0.265278
anchor_right = -0.0929687
anchor_bottom = -0.265278
offset_left = 436.0
offset_top = 436.0
offset_right = 496.0
offset_bottom = 496.0
grow_horizontal = 2
grow_vertical = 2

[node name="WL" parent="Field" instance=ExtResource("3")]
layout_mode = 1
anchor_left = 0.103125
anchor_top = -0.254167
anchor_right = 0.103125
anchor_bottom = -0.254167
offset_left = 436.0
offset_top = 436.0
offset_right = 496.0
offset_bottom = 496.0
grow_horizontal = 2
grow_vertical = 2

[node name="WR" parent="Field" instance=ExtResource("3")]
layout_mode = 1
anchor_left = -0.0929687
anchor_top = 0.0152778
anchor_right = -0.0929687
anchor_bottom = 0.0152778
offset_left = 436.0
offset_top = 436.0
offset_right = 496.0
offset_bottom = 496.0
grow_horizontal = 2
grow_vertical = 2

[node name="P" parent="Field" instance=ExtResource("3")]
layout_mode = 1
anchor_left = 0.107813
anchor_top = 0.0402778
anchor_right = 0.107813
anchor_bottom = 0.0402778
offset_left = 436.0
offset_top = 436.0
offset_right = 496.0
offset_bottom = 496.0
grow_horizontal = 2
grow_vertical = 2

[node name="TacticInfoPopUp" type="Popup" parent="."]

[node name="Panel" type="Panel" parent="TacticInfoPopUp"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TacticInfo" type="Label" parent="TacticInfoPopUp"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "text"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pevmi")
}

[node name="PlayerList" parent="." instance=ExtResource("4")]
visible = false
layout_mode = 1

[connection signal="item_selected" from="FormationSelect" to="." method="_on_FormationSelect_item_selected"]
[connection signal="change_player" from="Field/G" to="." method="_on_G_change_player"]
[connection signal="change_player" from="Field/D" to="." method="_on_D_change_player"]
[connection signal="change_player" from="Field/WL" to="." method="_on_WL_change_player"]
[connection signal="change_player" from="Field/WR" to="." method="_on_WR_change_player"]
[connection signal="change_player" from="Field/P" to="." method="_on_P_change_player"]
[connection signal="select_player" from="PlayerList" to="." method="_on_PlayerList_select_player"]
